more style to the navbar (I should stop this blind styling but I like it too much :P)

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -109,7 +109,7 @@ body {
 .nav-list {
   display: flex;
   flex-direction: row;
-  gap: 8px;
+  gap: 4px;
   flex-wrap: wrap;
   justify-content: center;
 }
@@ -120,16 +120,43 @@ body {
   color: $text-light;
   text-decoration: none;
   font-weight: 500;
+  font-size: 14px;
   transition: color 0.2s ease;
   display: block;
+  position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 1px;
+    background-color: $accent-red;
+    transition: width 0.3s ease;
+  }
 
   &:hover {
     color: var(--accent-red);
+
+    &::after {
+      width: 100%;
+    }
   }
 
   &-active {
-    font-weight: 600;
+    // font-weight: 600;
     color: $accent-red;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      background-color: $accent-red;
+    }
   }
 }
 
